Correccion de sugerencias